JSTR-3. Restructured process logging to use two 'monitoring' classes, ProcessLogger and StreamDiscarder, which handle all monitoring requirements for a spawned process.